--- a/src/css/main.css
+++ b/src/css/main.css
@@ -3,6 +3,14 @@
   padding: 0;
   box-sizing: border-box;
 }
+:root {
+  --pXS: 20px;
+  --pS: 30px;
+  --pAvg: 70px;
+  --pM: 95px;
+  --pL: 130px;
+  --pXL: 230px;
+}
 img {
   width: 100%;
   height: 200px;
@@ -10,9 +18,9 @@ img {
 }
 .container {
   max-width: 1440px;
-  height: 100vh;
+  height: max-content;
   margin: 0 auto;
-  padding: 36px 30px;
+  padding: 36px var(--pS);
 }
 .content-wrapper {
   display: flex;
@@ -26,14 +34,14 @@ img {
   align-items: flex-start;
   flex-direction: column;
 }
-.content h1 {
+.title {
   font-size: 24px;
   font-family: 'Roboto';
   font-weight: 700;
   line-height: 120%;
   color: #121212;
 }
-.content p {
+.description {
   font-family: 'Roboto';
   font-weight: 300;
   font-size: 12px;
@@ -41,7 +49,7 @@ img {
   color: #121212;
 }
 .popup-button {
-  padding: 8px 20px;
+  padding: 8px var(--pXS);
   background-color: #e4c1ae;
   border: none;
   border-radius: 32px;
@@ -51,10 +59,59 @@ img {
   cursor: pointer;
   font-family: 'Roboto';
 }
+.close-modal-button {
+  height: 25px;
+  width: 25px;
+  padding: 5px;
+  position: absolute;
+  top: 46px;
+  right: 46px;
+}
+.alert {
+  background-color: rgba(0, 0, 0, 0.3);
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  padding: 0 20px;
+  top: 0;
+  display: none;
+}
+.reset {
+  display: none;
+  padding: 8px var(--pXS);
+  background-color: #e4c1ae;
+  border: none;
+  border-radius: 32px;
+  color: white;
+  font-size: 12px;
+  font-weight: 700;
+  position: absolute;
+  right: 30px;
+  bottom: 30px;
+  cursor: pointer;
+  font-family: 'Roboto';
+}
+.active {
+  display: block;
+}
+.pop-up {
+  max-width: 920px;
+  height: 210px;
+  padding: 56px var(--pS);
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  gap: 20px;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #ffffff;
+}
 
 @media screen and (min-width: 550px) {
   .container {
-    padding: 96px 20px;
+    padding: 96px var(--pS);
   }
   .content-wrapper {
     flex-direction: row;
@@ -65,11 +122,14 @@ img {
 }
 @media screen and (min-width: 650px) {
   .container {
-    padding: 96px 70px;
+    padding: 96px var(--pAvg);
   }
   img {
     width: 305px;
     height: 230px;
+  }
+  .pop-up {
+    padding: 56px var(--pM);
   }
   .content {
     width: 100%;
@@ -77,7 +137,7 @@ img {
 }
 @media screen and (min-width: 820px) {
   .container {
-    padding: 96px 130px;
+    padding: 96px var(--pL);
   }
 }
 @media screen and (min-width: 1000px) {
@@ -85,19 +145,16 @@ img {
     width: 405px;
     height: 330px;
   }
-  .container {
-    padding: 96px 130px;
-  }
   .content-wrapper {
     gap: 95px;
   }
   .content {
     gap: 25px;
   }
-  .content h1 {
+  .title {
     font-size: 36px;
   }
-  .content p {
+  .description {
     font-size: 16px;
   }
   .popup-button {
@@ -111,9 +168,9 @@ img {
     height: 330px;
   }
   .container {
-    padding: 96px 230px;
+    padding: 96px var(--pXL);
   }
-  .content h1 {
+  .title {
     font-size: 42px;
   }
 }
