--- a/src/css/main.css
+++ b/src/css/main.css
@@ -60,15 +60,20 @@ img {
   font-family: 'Roboto';
 }
 .close-modal-button {
+  background-image: url(../../images/x-icon.svg);
+  background-color: transparent;
+  border: none;
   height: 25px;
   width: 25px;
   padding: 5px;
   position: absolute;
   top: 46px;
   right: 46px;
+  cursor: pointer;
 }
 .alert {
   background-color: rgba(0, 0, 0, 0.3);
+  backdrop-filter: blur(5px);
   width: 100vw;
   height: 100vh;
   position: absolute;
@@ -81,6 +86,7 @@ img {
   padding: 8px var(--pXS);
   background-color: #e4c1ae;
   border: none;
+  transition-duration: 0.3s;
   border-radius: 32px;
   color: white;
   font-size: 12px;
@@ -94,7 +100,32 @@ img {
 .active {
   display: block;
 }
+.reset-action {
+  animation: reset 3s forwards;
+}
+@keyframes reset {
+  0% {
+  }
+  5% {
+    color: #e4c1ae;
+    transform: translate(100%, 100%);
+  }
+  9% {
+    transform: scale(20);
+    opacity: 0.4;
+  }
+  30% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 0;
+  }
+}
+.active {
+  display: block;
+}
 .pop-up {
+  overflow: hidden;
   max-width: 920px;
   height: 210px;
   padding: 56px var(--pS);
